syntax = "proto3";

package com.xml2023.mainapp;
option java_multiple_files = true;

message KorisnikRequest{
	string id = 1;
}

message KorisnikResponse{
	string responsemessage = 1;
	int32 responseCode = 2;
}

service GreetingService {
	rpc greeting(KorisnikRequest) returns (KorisnikResponse);
}

message SmestajExistsRequest{
	string id=1;
}

message SmestajExistsResponse{
	string responsemessage = 1;
	int32 responseCode = 2;
}

message RezervacijaExistsRequest{
	string id=1;
}

message RezervacijaExistsResponse{
	string responsemessage = 1;
	int32 responseCode = 2;
}

service SmestajGrpc{
	rpc exists(SmestajExistsRequest) returns (SmestajExistsResponse);
	rpc getSmestajIdsForHost(SmestajIdsForHostRequest) returns  (SmestajIdsForHostResponse);
	rpc deketeSnestajsForHost(DeleteSmestajsForHostRequest) returns (DeleteSmestajsForHostResponse);
}

service RezervacijaGrpc{
	rpc exists(RezervacijaExistsRequest) returns (RezervacijaExistsResponse);
	rpc reservationsForUserExists(ActiveResExistsRequest) returns (ActiveResExistsResponse);
}

message ActiveResExistsRequest{
	string userId=1;
	string tip=2;
}
message ActiveResExistsResponse{
	int32 exists=1;
}

message SmestajIdsForHostRequest{
	string userId=1;
}
message SmestajIdsForHostResponse{
	repeated string smestajIds=1;
}

message DeleteSmestajsForHostRequest{
	string hostId=1;
}
message DeleteSmestajsForHostResponse{
	int32 success=1;
}